--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,7 @@
+vdsotest 0.2
+============
+More options, more tests, better help.
+
 vdsotest 0.1
 ============
 Initial release.  Tested on 32-bit ARM, x86_64, and i386.
